demenchuk/examples/errors/parser/09_double_comma_list.riv
# PARSER ERROR: Двойная запятая в списке
# Ожидаемая ошибка: extraneous input at line 4

# Двойная запятая недопустима
data = [1, 2, , 3, 4]
write(data)
